[gd_scene format=3 uid="uid://bcnbmoivcm7yp"]

[ext_resource type="Script" uid="uid://ccbdtyh6ybw80" path="res://scenes/ball/ball.gd" id="1_x8fbi"]
[ext_resource type="AudioStream" uid="uid://c1exceqle3wri" path="res://assets/sounds/paddle_hit.mp3" id="2_nv6q1"]
[ext_resource type="AudioStream" uid="uid://diqmfkr1l5628" path="res://assets/sounds/wall_hit.mp3" id="3_stoaj"]
[ext_resource type="AudioStream" uid="uid://dixqd3m6t8tpw" path="res://assets/sounds/scored.mp3" id="4_xotqv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cbx31"]
radius = 8.0

[node name="Ball" type="CharacterBody2D" unique_id=21919213 groups=["ball"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_x8fbi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1810753983]
shape = SubResource("CircleShape2D_cbx31")

[node name="ColorRect" type="ColorRect" parent="." unique_id=343226810]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="PaddleHitSound" type="AudioStreamPlayer2D" parent="." unique_id=1683892972]
stream = ExtResource("2_nv6q1")
volume_db = -2.0

[node name="WallHitSound" type="AudioStreamPlayer2D" parent="." unique_id=504458070]
stream = ExtResource("3_stoaj")
volume_db = -2.0

[node name="ScoredSound" type="AudioStreamPlayer2D" parent="." unique_id=445088513]
stream = ExtResource("4_xotqv")
volume_db = -2.0
